Alterações nas CSS

--- a/Projetos_Práticos/Site_SobreMim/index.html
+++ b/Projetos_Práticos/Site_SobreMim/index.html
@@ -13,7 +13,7 @@
         <h2>Quem sou eu?</h2>
         <img src="Imagens/perfil.png" alt="Minhafoto">
         <p> 
-        <code> Meu nome é <strong>Israel Felipe de Oliveira Souza</strong>, sou estudantes de análise e desenvolvimento de sistemas na faculdade <a href="https://estacio.br/#!">Estácio</a>.            
+        <code> Meu nome é <strong>Israel Felipe de Oliveira Souza</strong>, sou estudantes de análise e desenvolvimento de sistemas na faculdade <a href="https://estacio.br/#!">Estácio</a>, amante da área de tecninologias, casado com uma bela moça e pai de um menino incrível.            
         <p>Trabalho atualmente na área comercial como Analista Comercial. Tenhos experiência no atendimento ao cliente, suporte técnico, exclarecimento de dúvidas, precificação de propostas simples complexas, como BIDs e contratos nas áreas de Higiene ocupacional, Meio Ambiente e Emissões Atmosféricas.</p>
         <p> Busco atualmente migrar para área de tecninologias, mais expecificamente para desenvolvimento de sistemas.
         Meus estudos são focados na ferramenta <strong>SalesForce</strong>, um CRM bem completo, <strong>Python</strong>, para utilizar em tratamento de dados principalmente, mas não se limitando a isso, desenvolvimento WEB com <strong>HTML, CSS, JavaScrip</strong> e <strong>Power BI</strong> para apresentação de Dashboards.
