--- a/Exercícios_SalaDeAula/ex018/font1.html
+++ b/Exercícios_SalaDeAula/ex018/font1.html
@@ -9,6 +9,9 @@
 
         @import url('https://fonts.googleapis.com/css2?family=Ballet:opsz@16..72&family=Sacramento&display=swap');
 
+        * {
+            background-color: antiquewhite;
+        }
         body {
             font-family: 'Sacramento', cursive;
             font-size: 3em;
@@ -17,11 +20,18 @@
         h1 {
             font-family: 'Ballet', cursive;
             font-size: 1.5em;
+            text-align: center;
+        }
+
+        p {
+            text-indent: 20px;
+            text-align: justify;
         }
     </style>
 </head>
 <body>
     <h1>Título</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, quia, nobis quod praesentium architecto optio assumenda in doloribus debitis recusandae tempora quo facilis quae, dolorem tenetur reprehenderit neque expedita? Pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur accusamus debitis? Mollitia odio cumque iusto asperiores recusandae et doloremque officia reprehenderit velit minima tempora incidunt autem, atque labore fuga?</p>
 </body>
 </html>
