--- a/Exercícios_SalaDeAula/ex018/font2.html
+++ b/Exercícios_SalaDeAula/ex018/font2.html
@@ -13,7 +13,7 @@
         }
 
         main {
-            background-color: black;
+            background-color: bisque;
             border-radius: 20px;
             box-shadow: 5px 5px 15px #1F1F1F;
             width: 600px;
@@ -26,7 +26,7 @@
             font-size: 3em;
             font-weight: bold;
             font-style: normal;
-            color: rgb(250, 245, 245);
+            color: rgb(0, 0, 0);
             text-align: center;
         }
 
@@ -34,8 +34,8 @@
             font-family: 'angel', Helvetica, sans-serif;
             font-size: 2.7em;
             font-style: italic;
-            background-color: black;
-            color: red;
+            background-color: rgb(255, 255, 255);
+            color: rgb(0, 0, 0);
             text-align: justify;
             background-image: linear-gradient(to left,#454545, #1F1F1F 90%, #000000ee); 
         }
@@ -44,7 +44,7 @@
 </head>
 <body>
     <main>
-        <h1>Death Note</h1>
+        <h1>Lista de nomes para oração</h1>
         <li>Stefane</li>
         <li>Tafnes</li>
         <li>Juliana</li>
