--- a/Exercícios_SalaDeAula/ex017/fontes01.html
+++ b/Exercícios_SalaDeAula/ex017/fontes01.html
@@ -27,6 +27,9 @@
         }
 
         p {
+
+            text-align: justify;
+            text-indent: 30px;
             /* shorthand font
              - font-style -> font-weight -> font-size -> font-family
              
