--- a/Exercícios_SalaDeAula/ex019/index.html
+++ b/Exercícios_SalaDeAula/ex019/index.html
@@ -11,19 +11,19 @@
         <h1>Criando Sites com HTML e CSS</h1>
         <h2>Aprendendo HTML</h2>
         <h3>HTML Básico</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis magni voluptas ducimus non dignissimos. Laboriosam vel non explicabo modi laborum, adipisci hic, tempore reiciendis eligendi sapiente cupiditate repudiandae veniam corrupti?</p>
+        <p class="basico">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis magni voluptas ducimus non dignissimos. Laboriosam vel non explicabo modi laborum, adipisci hic, tempore reiciendis eligendi sapiente cupiditate repudiandae veniam corrupti?</p>
         <h3>HTML Intermediário</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, non fuga pariatur doloremque iure consequuntur totam molestias animi temporibus quos at dolorem consectetur facere labore! Reiciendis architecto corrupti ut suscipit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, non fuga pariatur doloremque iure consequuntur totam molestias animi temporibus quos at dolorem consectetur facere labore! Reiciendis architecto <span class="basico destaque">corrupti ut suscipit.</span></p>
         <h3>HTML Avançado</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia suscipit quaerat iure! Recusandae totam, quia, quasi ipsum beatae ex praesentium aliquid rerum autem ab expedita, modi enim dolorum numquam. Maiores.</p>
     </main>
 
     <hr>
-        <h1 id="secundario">Aprendendo CSS</h1>
+        <h1 id="secundario">Outros Assuntos</h1>
     <section id="secao1">
         <article class="conteudo">
             <h1></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ipsa dolorem atque fugiat quae, dolorum autem nesciunt laborum nisi expedita commodi esse a! A vitae, debitis sapiente consectetur quo aspernatur.</p>
+            <p class="basico">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ipsa dolorem atque fugiat quae, dolorum autem nesciunt laborum nisi expedita commodi esse a! A vitae, debitis sapiente consectetur quo aspernatur.</p>
         </article>
         <!-- /.conteudo -->
     </section>
@@ -31,7 +31,7 @@
     <section id="secao2">
         <article class="conteudo">
             <h1></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ipsa dolorem atque fugiat quae, dolorum autem nesciunt laborum nisi expedita commodi esse a! A vitae, debitis sapiente consectetur quo aspernatur.</p>
+            <p class="basico">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ipsa dolorem atque fugiat quae, dolorum autem nesciunt laborum nisi expedita commodi esse a! A vitae, debitis sapiente consectetur quo aspernatur.</p>
         </article>
         <!-- /.conteudo -->
     </section>
@@ -39,7 +39,7 @@
     <section id="secao3">
         <article class="conteudo">
             <h1></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ipsa dolorem atque fugiat quae, dolorum autem nesciunt laborum nisi expedita commodi esse a! A vitae, debitis sapiente consectetur quo aspernatur.</p>
+            <p class="basico">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ipsa dolorem atque fugiat quae, dolorum autem nesciunt laborum nisi expedita commodi esse a! A vitae, debitis sapiente consectetur quo aspernatur.</p>
         </article>
         <!-- /.conteudo -->
     </section>
