--- a/Exercícios_SalaDeAula/ex021/caixa01.html
+++ b/Exercícios_SalaDeAula/ex021/caixa01.html
@@ -1,24 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelo de Caixas</title>
     <style>
-        h1{
+        h1 {
             background-color: lightgray;
             height: 300px;
             width: 300px;
+
+
+            border: 10px solid darkslategray;
+            /*short hands border*/
+
+            /*
             border-width: 10px;
             border-style: solid;
             border-color: darkslategray;
+            */
+
+
+            padding: 10px;
+            /*short hands padding*/
+
+            /*
             padding-top: 10px;
             padding-right: 10px;
             padding-bottom: 10px;
             padding-left: 10px;
+            */
+
+            margin: 20px auto 40px auto;
+            /*short hands margin*/
+
+            outline: 5px dashed salmon;
+
+            /*
+            outline-width: 5px;
+            outline-style: dashed;
+            outline-color: salmon;
+            */
         }
 
-        a{
+        a {
             border-width: 3px;
             border-style: solid;
             border-color: red;
@@ -29,8 +55,11 @@
         }
     </style>
 </head>
+
 <body>
     <h1>Exemplo de caixa box-level</h1>
-    <p>Parágrafos também são exemplos de box-level, mas os <a href="#">links são exemplos de caixas inline-level</a>. Vamos ver como tudo isso funciona.</p>
+    <p>Parágrafos também são exemplos de box-level, mas os <a href="#">links são exemplos de caixas inline-level</a>.
+        Vamos ver como tudo isso funciona.</p>
 </body>
+
 </html>
