Exercícios do capítulo 16

--- a/Exercícios_SalaDeAula/ex021/caixa01.html
+++ b/Exercícios_SalaDeAula/ex021/caixa01.html
@@ -8,9 +8,10 @@
     <style>
         h1 {
             background-color: lightgray;
+
             height: 300px;
             width: 300px;
-
+            /*box-size*/
 
             border: 10px solid darkslategray;
             /*short hands border*/
@@ -35,7 +36,7 @@
             margin: 20px auto 40px auto;
             /*short hands margin*/
 
-            outline: 5px dashed salmon;
+            outline: 15px dashed salmon; /*fica entre border e margin*/
 
             /*
             outline-width: 5px;
