--- a/Exercícios_SalaDeAula/ex021/caixa02.html
+++ b/Exercícios_SalaDeAula/ex021/caixa02.html
@@ -4,6 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grouping Tags</title>
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: gray;
+        }
+
+        header {
+            background-color: bisque;
+            padding: 10px;
+            margin: 10px;
+        }
+
+        nav {
+            background-color:dimgray;
+            padding: 3px;
+            box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.493);  
+        }
+        nav > a {
+            text-decoration: none;
+            color: white;
+            font-weight: bold;
+            margin-right: 30px;            
+        }
+        nav > a:hover {
+            text-decoration: underline;
+        }
+
+        main {
+            background-color: azure;
+            padding: 10px;
+            margin: 10px;
+            border-radius: 15px;
+        }
+        article {
+            background-color: rgba(206, 164, 164, 0.555);
+            padding: 5px;
+        }
+        article > aside {
+            background-color: bisque;
+            border-style: double;
+            border-radius: 15px;
+        }
+        footer {
+            background-color: black;
+            color:white;
+            text-align: center;
+            padding: 4px;
+            margin: 0px;
+
+        }
+        footer > p {
+            margin: 0px;
+        }
+
+    </style>
 </head>
 <body>
     <header>
@@ -30,7 +85,7 @@
 
     </main>
     <footer>
-
+        <p>Desenvolvido por Israel</p>
     </footer>
 </body>
 </html>
