--- a/Desafios_SalaDeAula/d10/index.html
+++ b/Desafios_SalaDeAula/d10/index.html
@@ -33,7 +33,10 @@
             </h2>
             <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
             </p>
-            <img src="imagens/irina-blok.jpg" alt="Criadora do mascote do android">
+            <picture>
+                <source media="(max-width: 800px)" srcset="imagens/irina-blok-pq.jpg">
+                <img src="imagens/irina-blok.jpg" alt="Criadora do mascote do android">
+            </picture>
             <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.
             </p>
             <img src="imagens/bugdroid.png" alt="">
