--- a/Desafios_SalaDeAula/d10/index.html
+++ b/Desafios_SalaDeAula/d10/index.html
@@ -21,10 +21,10 @@
     <main>
         <article>
             <h1>História do Mascote do Android</h1>
-            <p>Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo Google é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
+            <p>Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo <a href="">Google</a> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
             <br>
             <h2>A primeira versão</h2>
-            <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
+            <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o <a href="">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
             </p>
             <picture>
                 <source media="(max-width: 800px)" srcset="imagens/dan-droids-pq.png">
@@ -70,16 +70,14 @@
             </ul>
             <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
             </p>
-            <p>Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
+            <p>Acesse aqui o site <a href="">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
             </p>
-        </aside>        
+        </aside>
+        <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.
+        </p>        
     </main>
     <footer>
-        <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.
-        </p>
-        <aside>
-            <p>Site criado por <a href="https://github.com/IsraelSouza1991">Israel Souza</a> com o apoio de Gustavo Guanabara do CursoemVideo.</p>
-        </aside>
+        <p>Site criado por <a href="https://github.com/IsraelSouza1991">Israel Souza</a> com o apoio de Gustavo Guanabara do CursoemVideo.</p>
     </footer>
 </body>
 </html>
